# bones

./: .editorconfig  .gitignore  CMakeLists.txt  main.cpp
src/: camera.cpp  camera.h  main.cpp  mesh.h
